Контрол, показывающий листы согласования и всеми согласующими. Вкладка "Согласование/подписание" для исходящих.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6672 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -46,3 +46,6 @@ form.control.field-important = IMPORTANT!
 message.load.dnd-uploader.failure=Error initialisation flash-uploder
 
 label.file-assoc.delete=Delete
+
+message.report.success=Report formed succesfully
+message.report.failure=Report failed
