--- a/lecm-workflow/repo/src/main/config/messages/lecm-workflow-result.properties
+++ b/lecm-workflow/repo/src/main/config/messages/lecm-workflow-result.properties
@@ -3,6 +3,7 @@ lecm-workflow-result_workflow-result-model.property.lecm-workflow-result_workflo
 lecm-workflow-result_workflow-result-model.property.lecm-workflow-result_workflow-result-list-start-date.title=Workflow start date
 lecm-workflow-result_workflow-result-model.property.lecm-workflow-result_workflow-result-list-document-version.title=Version
 lecm-workflow-result_workflow-result-model.association.lecm-workflow-result_workflow-result-list-workflow-result-item-assoc.title=Results list contains result list element
+lecm-workflow-result_workflow-result-model.association.lecm-workflow-result_workflow-result-list-initiator-assoc.title=Initiator
 
 lecm-workflow-result_workflow-result-model.type.lecm-workflow-result_workflow-result-item.title=Result list element
 lecm-workflow-result_workflow-result-model.property.lecm-workflow-result_workflow-result-item-start-date.title=Task start date
