[~] ALF-1907. Групповые операции. Добавлено значение по умолчанию для форм.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6683 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-group-actions/repo/src/main/config/messages/group-actions.properties
+++ b/lecm-group-actions/repo/src/main/config/messages/group-actions.properties
@@ -8,3 +8,4 @@ lecm-group-actions_model.property.lecm-group-actions_form-fields-ref.title=Scrip
 lecm-group-actions_model.property.lecm-group-actions_field-id.title=Field Id
 lecm-group-actions_model.property.lecm-group-actions_field-type.title=Data Type
 lecm-group-actions_model.property.lecm-group-actions_forCollection.title=For Collection
+lecm-group-actions_model.property.lecm-group-actions_field-default-value.title=Default Value
