"Заготовки" для модуля ОРД
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6685 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
 		<module>lecm-workflow</module>
 		<module>lecm-internal</module>
 		<module>lecm-group-actions</module>
+		<module>lecm-ord</module>
 		<!--<module>lecm-licensing</module>-->
 	</modules>
 	<scm>
