--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -312,6 +312,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.ord</groupId>
+            <artifactId>ord-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
         <!--<dependency>
             <groupId>ru.it.lecm.licensing</groupId>
             <artifactId>licensing-share</artifactId>
