--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -375,6 +375,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.ord</groupId>
+            <artifactId>ord-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
         <!--<dependency>
             <groupId>ru.it.lecm.licensing</groupId>
             <artifactId>licensing-repo</artifactId>
