--- a/lecm-workflow/lecm-signing/repo/pom.xml
+++ b/lecm-workflow/lecm-signing/repo/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>spring-beans</artifactId>
         </dependency>
 		<dependency>
+			<groupId>org.springframework.extensions.surf</groupId>
+			<artifactId>spring-surf</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-engine</artifactId>
 		</dependency>
