--- a/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/toolbar/toolbar.get.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/toolbar/toolbar.get.properties
@@ -1,3 +1,15 @@
 lecm.arm.add-element=Add element
 lecm.arm.delete-element=Delete element
 lecm.arm.reports-node.add=Add reports node
+lecm.arm.export=Export
+lecm.arm.import=Import
+
+title.select-file=Select file please
+title.import=Import
+title.import.info=Import info
+label.ignore-errors=Ignore errors
+label.import-file=Impotr file
+import.failure=Import failure
+import.failure.exception=Exception
+import.failure.stack-trace=StackTrace
+import.failure.showMore=Show more information
