[+] ALF-1923 Права на доступ к отчетам
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6717 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -81,6 +81,8 @@ lecm-rpeditor_model.association.lecm-rpeditor_reportProviderAssoc.title=Report P
 lecm-rpeditor_model.association.lecm-rpeditor_reportProviderAssoc.description=Report Provider
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateAssoc.title=Report Template
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateAssoc.description=Report Template
+lecm-rpeditor_model.association.lecm-rpeditor_businessRolesAssoc.description=Business Roles
+lecm-rpeditor_model.association.lecm-rpeditor_businessRolesAssoc.title=Business Roles
 
 lecm-rpeditor_model.association.lecm-rpeditor_parentReportTemplateAssoc.title=Parent Template
 lecm-rpeditor_model.association.lecm-rpeditor_parentReportTemplateAssoc.description=Parent Template
