ALF-1980: При наведении курсора мыши на "АРМ СЭД" в выпадающем списке "Еще" выводится сообщение на английском
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6734 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
@@ -1,5 +1,7 @@
 header.arm-settings.label=ARM settings
+header.arm-settings.description=ARM settings
 header.arm.label=ARM
+header.arm.description=ARM
 
 page.title.arm.settings=ARM settings
 page.content.filter.labe=Content filtered
