Модуль НД, модель ОРД Пункты, Формы ОРД
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6760 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-ord/share/src/main/resources/alfresco/web-extension/ru/it/lecm/ord/ord.properties
+++ b/lecm-ord/share/src/main/resources/alfresco/web-extension/ru/it/lecm/ord/ord.properties
@@ -12,3 +12,11 @@ page.lecm-ord_document=Organizational and Administrative Documents
 button.lecm-ord_document.new=New OAD
 label.create-lecm-ord_document=Create OAD
 label.filter-lecm-ord_document=OAD
+
+label.ord.common=Common
+label.ord.items=Items
+label.ord.agreement=Agreement
+
+ord.item.edit.form.title=Edit
+ord.item.create.form.title=New
+ord.item.view.form.title=View
