--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -319,6 +319,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.nd</groupId>
+            <artifactId>nd-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
         <!--<dependency>
             <groupId>ru.it.lecm.licensing</groupId>
             <artifactId>licensing-share</artifactId>
